pr throughput